# visionglass

./: NGROK  README.md
ALERTS/: CMakeLists.txt  README.md  engine.cpp  helpers.hh  main.cpp
DATABASE/: README.md  brodcast.py  default  requirements.txt
DEPLOYMENT/ARCHITECTURE/: ARCHITECTURE
DEPLOYMENT/COMPONENT/: COMPONENT
FACIALDETECTION/: CMakeLists.txt  ENGINE  README.md  engine.cpp  main.cpp
FACIALRECOGNTION/: CMakeLists.txt  README.md  engine.cpp  main.cpp
FACIALRECOGNTION/include/MTCNN/: mtcnn.hpp
LIVECAM/: CMakeLists.txt  README.md  engine.cpp  main.cpp
MEDIAPLAYER/: CMakeLists.txt  README.md  engine.cpp  main.cpp  requirements.txt
MEDIAPLAYER/include/: stream.hpp
NOTIFICATIONS/: CMakeLists.txt  README.md  engine.cpp  main.cpp
POI/: CMakeLists.txt  README.md  engine.cpp  main.cpp
POI/include/MTCNN/: mtcnn.cpp
STREAM/: README.md
